change source tree

--- a/web-app/package.json
+++ b/web-app/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "cd .. && husky install webapp/.husky",
+    "prepare": "cd .. && husky install web-app/.husky",
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "check-lint": "eslint . --ext ts --ext tsx --ext js",
