--- a/.github/workflows/server-check.yml
+++ b/.github/workflows/server-check.yml
@@ -15,7 +15,7 @@ on:
 #   FBBE_project_id:  ${{ vars.FBBE_project_id }}
 #   FBBE_private_key_id:  ${{ vars.FBBE_private_key_id }}
 #   FBBE_private_key:  ${{ vars.FBBE_private_key }}
-#   FBBE_client_email:  ${{ vars.FBBE_client_email }} 
+#   FBBE_client_email:  ${{ vars.FBBE_client_email }}
 #   FBBE_client_id:  ${{ vars.FBBE_client_id }}
 #   FBBE_auth_uri:  ${{ vars.FBBE_auth_uri }}
 #   FBBE_token_uri:  ${{ vars.FBBE_token_uri }}
@@ -31,7 +31,6 @@ on:
 #   NEXT_PUBLIC_FBFE_measurementId: ${{ vars.NEXT_PUBLIC_FBFE_measurementId }}
 
 jobs:
-
   install-package:
     runs-on: ubuntu-latest
     steps:
@@ -39,7 +38,7 @@ jobs:
       - name: Set up Node 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: "18.x"
       - name: install packages
         run: yarn
         working-directory: web-app
@@ -47,7 +46,7 @@ jobs:
         uses: actions/cache@v3
         id: cache-node-modules
         with:
-          path: ./node_modules
+          path: ./web-app/node_modules
           key: ${{ github.sha }}
 
   check-format:
@@ -59,17 +58,17 @@ jobs:
       - name: Set up Node 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: "18.x"
       - name: Reuse node modules
         uses: actions/cache@v3
         id: cache-node-modules
         with:
-          path: ./node_modules
+          path: ./web-app/node_modules
           key: ${{ github.sha }}
       - name: check format
         run: yarn check-format
         working-directory: web-app
-  
+
   check-lint:
     runs-on: ubuntu-latest
     needs: [install-package]
@@ -79,17 +78,17 @@ jobs:
       - name: Set up Node 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: "18.x"
       - name: Reuse node modules
         uses: actions/cache@v3
         id: cache-node-modules
         with:
-          path: ./node_modules
+          path: ./web-app/node_modules
           key: ${{ github.sha }}
       - name: check lint
         run: yarn check-lint
         working-directory: web-app
-  
+
   check-types:
     runs-on: ubuntu-latest
     needs: [install-package]
@@ -99,12 +98,12 @@ jobs:
       - name: Set up Node 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: "18.x"
       - name: Reuse node modules
         uses: actions/cache@v3
         id: cache-node-modules
         with:
-          path: ./node_modules
+          path: ./web-app/node_modules
           key: ${{ github.sha }}
       - name: check types
         run: yarn check-types
@@ -119,12 +118,12 @@ jobs:
       - name: Set up Node 18.x
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: "18.x"
       - name: Reuse node modules
         uses: actions/cache@v3
         id: cache-node-modules
         with:
-          path: ./node_modules
+          path: ./web-app/node_modules
           key: ${{ github.sha }}
       - name: check build next
         run: yarn build
